--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@playwright/test": "^1.46.1",
-    "@types/node": "^22.5.4"
+    "@playwright/test": "^1.49.0",
+    "@types/node": "^22.5.4",
+    "allure-playwright": "^3.0.6"
   }
 }
